Add ngFor Directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div>
   <h1>My Goals</h1>
-  <p>My goal for today is {{goals}}</p>
+  <ul>
+    <li *ngFor='let goal of goals'>{{goal}}</li>
+  </ul>
 </div>
