Add Input Property Binding

--- a/src/app/goal/goal.component.html
+++ b/src/app/goal/goal.component.html
@@ -1,4 +1,8 @@
-<ul>
-    <li *ngFor='let goal of goals'>{{goal.name}}</li>
+<div>
+    <ul>
+    <li *ngFor='let goal of goals'>{{goal.name}} 
+        <app-goaldetail [goal]='goal'></app-goaldetail>
+    </li>
   </ul>
   <p *ngIf='goals.length > 5'>Your goals are too many</p>
+</div>
